# polarview

./: CMakeLists.txt  Doxyfile  README.md  authors.txt  polarview_test
example/: main.cpp
source/include/: ArrayPolarView.hpp  DistanceReading.hpp  MapPolarView.hpp  PolarView.hpp
source/src/: ArrayPolarView.cpp  DistanceReading.cpp  MapPolarView.cpp  PolarView.cpp
test/: DistanceReadingTest.cpp  Main_TestAll.cpp  MapPolarViewTest.cpp  test.cpp
